<resources>
    <string name="app_name">FULL calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- "1", "2", "3", "+", "4", "5", "6", "-", "7", "8", "9", "<", "*", "0", "%", "C" -->

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Subraction">-</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="back"> &lt; </string>

    <string name="multiply">*</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="Clear">C</string>

    <string name="period">.</string>



</resources>
