<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboardGrid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <Button

            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:text="@string/one"
            android:textSize="40dp" />

        <Button
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:padding="5dip"
            android:text="@string/two"
            android:textSize="40dp" />

        <Button
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:text="@string/three"
            android:textSize="40dp" />

        <Button
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:text="@string/plus"
            android:textSize="40dp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/four"
            android:background="@drawable/shape"
            />

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/five"
            android:background="@drawable/shape"/>

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/six"
            android:background="@drawable/shape"/>
        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/Subraction"
            android:background="@drawable/shape"/>
    </TableRow>


    <TableRow
        android:layout_margin="10dp">

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/seven"
            android:background="@drawable/shape"/>

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/eight"
            android:background="@drawable/shape"/>

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/nine"
            android:background="@drawable/shape"/>
        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/back"
            android:background="@drawable/shape"/>
    </TableRow>

    <TableRow
        android:layout_margin="10dp">

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/multiply"
            android:background="@drawable/shape"/>

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/zero"
            android:background="@drawable/shape"/>

        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/equals"
            android:background="@drawable/shape"/>
        <Button
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/Clear"
            android:background="@drawable/shape"/>
    </TableRow>
</TableLayout>